syntax = "proto3";

import "protobuf/A2L.proto";

option go_package = "./../pkg/a2l";

service A2L {
  rpc GetTreeFromA2L (stream TreeFromA2LRequest) returns (stream TreeResponse) {}
  rpc GetJSONFromTree (stream JSONFromTreeRequest) returns (stream JSONResponse) {}
  rpc GetTreeFromJSON (stream TreeFromJSONRequest) returns (stream TreeResponse) {}
  rpc GetA2LFromTree (stream A2LFromTreeRequest) returns (stream A2LResponse) {}
}

message TreeFromA2LRequest {
  bytes a2l = 1;
}

message A2LResponse {
  bytes a2l = 1;
  optional string error = 2;
}

message JSONFromTreeRequest {
  bytes tree = 1;
  optional uint32 indent = 3;
  optional bool allow_partial = 4;
  optional bool emit_unpopulated = 5;
}

message A2LFromTreeRequest {
  bytes tree = 1;
  optional uint32 indent = 2;
  optional bool sorted = 3;
}

message TreeResponse {
  bytes serializedTreeChunk = 1;
  optional string error = 2;
}

message TreeFromJSONRequest {
  bytes json = 1;
  optional bool allow_partial = 2;
}

message JSONResponse {
  bytes json = 1;
  optional string error = 2;
}